// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sku-webpack-plugin build should create valid app 1`] = `
"<!doctype html>
<html>
  <head>
    <meta charset="utf-8">
    <title>
      Webpack App
    </title>
    <meta
      name="viewport"
      content="width=device-width,initial-scale=1"
    >
    <script
      defer="defer"
      src="main.js"
    >
    </script>
    <link
      href="main.css"
      rel="stylesheet"
    >
  </head>
  <body>
  </body>
</html>"
POST HYDRATE DIFFS: 
===================================================================
--- sourceHtml
+++ clientHtml
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -20,5 +20,18 @@
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#fff}
+            html._34xydr10,html._34xydr10 body{color-scheme:dark;background:#1C2330}
+      </style>
+      <div class="y4gdq30 m7ctzi18 m7ctzi1b">
+        <div class="_6euo5h0 _34xydr8n _34xydr7j _34xydrav _34xydr9r _34xydr5f _34xydr67 _34xydri7 _34xydr4j _34xydr4c m7ctzi18 m7ctzi1b _34xydr33 _34xydr36">
+          <span class="_6euo5h0 _34xydr4z m7ctzi0 m7ctzi1 m7ctzi21 _1gtekyg4 m7ctzid">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file
`;

exports[`sku-webpack-plugin build should generate the expected files 1`] = `
{
  "index.html": "<!doctype html><html><head><meta charset="utf-8"><title>Webpack App</title><meta name="viewport" content="width=device-width,initial-scale=1"><script defer="defer" src="main.js"></script><link href="main.css" rel="stylesheet"></head><body></body></html>",
  "main.css": ._6euo5h0 {
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  -webkit-tap-highlight-color: transparent;
}
[data-braid-hidefocusrings] ._6euo5h0 {
  outline: none;
}
._6euo5h1 {
  display: block;
}
._6euo5h2 {
  line-height: 1;
}
._6euo5h3 {
  list-style: none;
}
._6euo5h4 {
  quotes: none;
}
._6euo5h4:after,
._6euo5h4:before {
  content: "";
}
._6euo5h5 {
  border-collapse: collapse;
  border-spacing: 0;
}
._6euo5h6 {
  -webkit-appearance: none;
  appearance: none;
}
._6euo5h7 {
  background-color: transparent;
}
._6euo5h9 {
  color: inherit;
}
._6euo5ha:disabled {
  opacity: 1;
}
._6euo5ha::-ms-expand {
  display: none;
}
._6euo5hc[type="number"] {
  -moz-appearance: textfield;
}
._6euo5hc[type="number"]::-webkit-inner-spin-button,
._6euo5hc[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}
._6euo5hc::-ms-clear {
  display: none;
}
._6euo5hc::-webkit-search-cancel-button {
  -webkit-appearance: none;
}
._6euo5hf {
  color: inherit;
  text-decoration: none;
}
._34xydr0 {
  overflow: hidden;
}
._34xydr1 {
  overflow: scroll;
}
._34xydr2 {
  overflow: visible;
}
._34xydr3 {
  overflow: auto;
}
._34xydr4 {
  -webkit-user-select: none;
  user-select: none;
}
._34xydr5 {
  outline: none;
}
._34xydr6 {
  opacity: 0;
}
._34xydr7 {
  z-index: 0;
}
._34xydr8 {
  z-index: 1;
}
._34xydr9 {
  z-index: 2;
}
._34xydra {
  z-index: 90;
}
._34xydrb {
  z-index: 100;
}
._34xydrc {
  z-index: 200;
}
._34xydrd {
  z-index: 290;
}
._34xydre {
  z-index: 300;
}
._34xydrf {
  z-index: 400;
}
._34xydrg {
  cursor: default;
}
._34xydrh {
  cursor: pointer;
}
._34xydri {
  pointer-events: none;
}
._34xydrj {
  top: 0;
}
._34xydrk {
  bottom: 0;
}
._34xydrl {
  left: 0;
}
._34xydrm {
  right: 0;
}
._34xydrn {
  height: 100%;
}
._34xydro {
  height: var(--_1gjibho9);
}
._34xydrp {
  width: 100%;
}
._34xydrq {
  width: var(--_1gjibho9);
}
._34xydrr {
  min-width: 0;
}
._34xydrs {
  max-width: var(--_1gjibho11);
}
._34xydrt {
  max-width: var(--_1gjibho12);
}
._34xydru {
  max-width: var(--_1gjibho13);
}
._34xydrv {
  max-width: var(--_1gjibho14);
}
._34xydrw {
  max-width: -moz-fit-content;
  max-width: fit-content;
}
._34xydrx {
  transition: var(--_1gjibho5i);
}
._34xydry {
  transition: var(--_1gjibho5j);
}
._34xydrz:active {
  transform: var(--_1gjibho5k);
}
html._34xydr10 ._34xydr12,
html:not(._34xydr10) ._34xydr11 {
  background: var(--_1gjibho1t);
}
html._34xydr10 ._34xydr14,
html:not(._34xydr10) ._34xydr13 {
  background: var(--_1gjibho1u);
}
html._34xydr10 ._34xydr16,
html:not(._34xydr10) ._34xydr15 {
  background: var(--_1gjibho1v);
}
html._34xydr10 ._34xydr18,
html:not(._34xydr10) ._34xydr17 {
  background: var(--_1gjibho1w);
}
html._34xydr10 ._34xydr1a,
html:not(._34xydr10) ._34xydr19 {
  background: var(--_1gjibho1x);
}
html._34xydr10 ._34xydr1c,
html:not(._34xydr10) ._34xydr1b {
  background: var(--_1gjibho1y);
}
html._34xydr10 ._34xydr1e,
html:not(._34xydr10) ._34xydr1d {
  background: var(--_1gjibho1z);
}
html._34xydr10 ._34xydr1g,
html:not(._34xydr10) ._34xydr1f {
  background: var(--_1gjibho20);
}
html._34xydr10 ._34xydr1i,
html:not(._34xydr10) ._34xydr1h {
  background: var(--_1gjibho21);
}
html._34xydr10 ._34xydr1k,
html:not(._34xydr10) ._34xydr1j {
  background: var(--_1gjibho22);
}
html._34xydr10 ._34xydr1m,
html:not(._34xydr10) ._34xydr1l {
  background: var(--_1gjibho23);
}
html._34xydr10 ._34xydr1o,
html:not(._34xydr10) ._34xydr1n {
  background: var(--_1gjibho24);
}
html._34xydr10 ._34xydr1q,
html:not(._34xydr10) ._34xydr1p {
  background: var(--_1gjibho25);
}
html._34xydr10 ._34xydr1s,
html:not(._34xydr10) ._34xydr1r {
  background: var(--_1gjibho26);
}
html._34xydr10 ._34xydr1u,
html:not(._34xydr10) ._34xydr1t {
  background: var(--_1gjibho27);
}
html._34xydr10 ._34xydr1w,
html:not(._34xydr10) ._34xydr1v {
  background: var(--_1gjibho28);
}
html._34xydr10 ._34xydr1y,
html:not(._34xydr10) ._34xydr1x {
  background: var(--_1gjibho29);
}
html._34xydr10 ._34xydr20,
html:not(._34xydr10) ._34xydr1z {
  background: var(--_1gjibho2a);
}
html._34xydr10 ._34xydr22,
html:not(._34xydr10) ._34xydr21 {
  background: var(--_1gjibho2b);
}
html._34xydr10 ._34xydr24,
html:not(._34xydr10) ._34xydr23 {
  background: var(--_1gjibho2c);
}
html._34xydr10 ._34xydr26,
html:not(._34xydr10) ._34xydr25 {
  background: var(--_1gjibho2d);
}
html._34xydr10 ._34xydr28,
html:not(._34xydr10) ._34xydr27 {
  background: var(--_1gjibho2e);
}
html._34xydr10 ._34xydr2a,
html:not(._34xydr10) ._34xydr29 {
  background: var(--_1gjibho2f);
}
html._34xydr10 ._34xydr2c,
html:not(._34xydr10) ._34xydr2b {
  background: var(--_1gjibho2g);
}
html._34xydr10 ._34xydr2e,
html:not(._34xydr10) ._34xydr2d {
  background: var(--_1gjibho2h);
}
html._34xydr10 ._34xydr2g,
html:not(._34xydr10) ._34xydr2f {
  background: var(--_1gjibho2i);
}
html._34xydr10 ._34xydr2i,
html:not(._34xydr10) ._34xydr2h {
  background: var(--_1gjibho2j);
}
html._34xydr10 ._34xydr2k,
html:not(._34xydr10) ._34xydr2j {
  background: var(--_1gjibho2k);
}
html._34xydr10 ._34xydr2m,
html:not(._34xydr10) ._34xydr2l {
  background: var(--_1gjibho2l);
}
html._34xydr10 ._34xydr2o,
html:not(._34xydr10) ._34xydr2n {
  background: var(--_1gjibho2m);
}
html._34xydr10 ._34xydr2q,
html:not(._34xydr10) ._34xydr2p {
  background: var(--_1gjibho2n);
}
html._34xydr10 ._34xydr2s,
html:not(._34xydr10) ._34xydr2r {
  background: var(--_1gjibho2o);
}
html._34xydr10 ._34xydr2u,
html:not(._34xydr10) ._34xydr2t {
  background: var(--_1gjibho2p);
}
html._34xydr10 ._34xydr2w,
html:not(._34xydr10) ._34xydr2v {
  background: var(--_1gjibho2q);
}
html._34xydr10 ._34xydr2y,
html:not(._34xydr10) ._34xydr2x {
  background: var(--_1gjibho2r);
}
html._34xydr10 ._34xydr30,
html:not(._34xydr10) ._34xydr2z {
  background: var(--_1gjibho2s);
}
html._34xydr10 ._34xydr32,
html:not(._34xydr10) ._34xydr31 {
  background: var(--_1gjibho2t);
}
html._34xydr10 ._34xydr34,
html:not(._34xydr10) ._34xydr33 {
  background: var(--_1gjibho2u);
}
html._34xydr10 ._34xydr36,
html:not(._34xydr10) ._34xydr35 {
  background: var(--_1gjibho2v);
}
html._34xydr10 ._34xydr38,
html:not(._34xydr10) ._34xydr37 {
  box-shadow: var(--_1gjibho5l);
}
html._34xydr10 ._34xydr3a,
html:not(._34xydr10) ._34xydr39 {
  box-shadow: var(--_1gjibho5m);
}
html._34xydr10 ._34xydr3c,
html:not(._34xydr10) ._34xydr3b {
  box-shadow: var(--_1gjibho5n);
}
html._34xydr10 ._34xydr3e,
html:not(._34xydr10) ._34xydr3d {
  box-shadow: inset 0 0 0 var(--_1gjibhoy) var(--_1gjibhof);
}
html._34xydr10 ._34xydr3g,
html:not(._34xydr10) ._34xydr3f {
  box-shadow: inset 0 0 0 var(--_1gjibhoy) var(--_1gjibhog);
}
html._34xydr10 ._34xydr3i,
html:not(._34xydr10) ._34xydr3h {
  box-shadow: inset 0 0 0 var(--_1gjibhoz) var(--_1gjibhof);
}
html._34xydr10 ._34xydr3k,
html:not(._34xydr10) ._34xydr3j {
  box-shadow: inset 0 0 0 var(--_1gjibhoz) var(--_1gjibhog);
}
html._34xydr10 ._34xydr3m,
html:not(._34xydr10) ._34xydr3l {
  box-shadow: inset 0 0 0 var(--_1gjibhoy) var(--_1gjibhoh);
}
html._34xydr10 ._34xydr3o,
html:not(._34xydr10) ._34xydr3n {
  box-shadow: inset 0 0 0 var(--_1gjibhoy) var(--_1gjibhoi);
}
html._34xydr10 ._34xydr3q,
html:not(._34xydr10) ._34xydr3p {
  box-shadow: inset 0 0 0 var(--_1gjibhoy) var(--_1gjibhoj);
}
html._34xydr10 ._34xydr3s,
html:not(._34xydr10) ._34xydr3r {
  box-shadow: inset 0 0 0 var(--_1gjibhoz) var(--_1gjibhoj);
}
html._34xydr10 ._34xydr3u,
html:not(._34xydr10) ._34xydr3t {
  box-shadow: inset 0 0 0 var(--_1gjibhoy) var(--_1gjibhok);
}
html._34xydr10 ._34xydr3w,
html:not(._34xydr10) ._34xydr3v {
  box-shadow: inset 0 0 0 var(--_1gjibhoz) var(--_1gjibhok);
}
html._34xydr10 ._34xydr3y,
html:not(._34xydr10) ._34xydr3x {
  box-shadow: inset 0 0 0 var(--_1gjibhoy) var(--_1gjibhol);
}
html._34xydr10 ._34xydr40,
html:not(._34xydr10) ._34xydr3z {
  box-shadow: inset 0 0 0 var(--_1gjibhoy) var(--_1gjibhon);
}
html._34xydr10 ._34xydr42,
html:not(._34xydr10) ._34xydr41 {
  box-shadow: inset 0 0 0 var(--_1gjibhoz) var(--_1gjibhon);
}
html._34xydr10 ._34xydr44,
html:not(._34xydr10) ._34xydr43 {
  box-shadow: inset 0 0 0 var(--_1gjibhoy) var(--_1gjibhoo);
}
html._34xydr10 ._34xydr46,
html:not(._34xydr10) ._34xydr45 {
  box-shadow: inset 0 0 0 var(--_1gjibhoz) var(--_1gjibhoo);
}
html._34xydr10 ._34xydr48,
html:not(._34xydr10) ._34xydr47 {
  box-shadow: inset 0 0 0 var(--_1gjibhoy) var(--_1gjibhop);
}
html._34xydr10 ._34xydr4a,
html:not(._34xydr10) ._34xydr49 {
  box-shadow: inset 0 0 0 var(--_1gjibhoy) var(--_1gjibhoq);
}
html._34xydr10 ._34xydr4c,
html:not(._34xydr10) ._34xydr4b {
  box-shadow: inset 0 0 0 var(--_1gjibhoy) var(--_1gjibhor);
}
html._34xydr10 ._34xydr4e,
html:not(._34xydr10) ._34xydr4d {
  box-shadow: inset 0 0 0 var(--_1gjibhoz) var(--_1gjibhor);
}
html._34xydr10 ._34xydr4g,
html:not(._34xydr10) ._34xydr4f {
  box-shadow: inset 0 0 0 var(--_1gjibhoy) var(--_1gjibhos);
}
html._34xydr10 ._34xydr4i,
html:not(._34xydr10) ._34xydr4h {
  box-shadow: inset 0 0 0 var(--_1gjibhoz) var(--_1gjibhos);
}
html._34xydr10 ._34xydr4k,
html:not(._34xydr10) ._34xydr4j {
  box-shadow: inset 0 0 0 var(--_1gjibhoy) var(--_1gjibhot);
}
html._34xydr10 ._34xydr4m,
html:not(._34xydr10) ._34xydr4l {
  box-shadow: inset 0 0 0 var(--_1gjibhoy) var(--_1gjibhou);
}
html._34xydr10 ._34xydr4o,
html:not(._34xydr10) ._34xydr4n {
  box-shadow: inset 0 0 0 var(--_1gjibhoy) var(--_1gjibhov);
}
html._34xydr10 ._34xydr4q,
html:not(._34xydr10) ._34xydr4p {
  box-shadow: inset 0 0 0 var(--_1gjibhoy) var(--_1gjibhow);
}
html._34xydr10 ._34xydr4s,
html:not(._34xydr10) ._34xydr4r {
  box-shadow: inset 0 0 0 var(--_1gjibhoy) var(--_1gjibhox);
}
html._34xydr10 ._34xydr4u,
html:not(._34xydr10) ._34xydr4t {
  box-shadow: 0 0 0 var(--_1gjibho10) var(--_1gjibhom);
}
._34xydr4v {
  display: none;
}
._34xydr4z {
  display: block;
}
._34xydr53 {
  display: inline;
}
._34xydr57 {
  display: inline-block;
}
._34xydr5b {
  display: flex;
}
._34xydr5f {
  position: relative;
}
._34xydr5j {
  position: absolute;
}
._34xydr5n {
  position: fixed;
}
._34xydr5r {
  border-radius: 0;
}
._34xydr5v {
  border-radius: 9999px;
}
._34xydr5z {
  border-radius: var(--_1gjibhob);
}
._34xydr63 {
  border-radius: var(--_1gjibhoc);
}
._34xydr67 {
  border-radius: var(--_1gjibhod);
}
._34xydr6b {
  border-radius: var(--_1gjibhoe);
}
._34xydr6f {
  gap: var(--_1gjibho0);
}
._34xydr6j {
  gap: var(--_1gjibho1);
}
._34xydr6n {
  gap: var(--_1gjibho2);
}
._34xydr6r {
  gap: var(--_1gjibho3);
}
._34xydr6v {
  gap: var(--_1gjibho4);
}
._34xydr6z {
  gap: var(--_1gjibho5);
}
._34xydr73 {
  gap: var(--_1gjibho6);
}
._34xydr77 {
  gap: var(--_1gjibho7);
}
._34xydr7b {
  gap: var(--_1gjibho8);
}
._34xydr7f {
  gap: 0;
}
._34xydr7j {
  padding-top: var(--_1gjibho0);
}
._34xydr7n {
  padding-top: var(--_1gjibho1);
}
._34xydr7r {
  padding-top: var(--_1gjibho2);
}
._34xydr7v {
  padding-top: var(--_1gjibho3);
}
._34xydr7z {
  padding-top: var(--_1gjibho4);
}
._34xydr83 {
  padding-top: var(--_1gjibho5);
}
._34xydr87 {
  padding-top: var(--_1gjibho6);
}
._34xydr8b {
  padding-top: var(--_1gjibho7);
}
._34xydr8f {
  padding-top: var(--_1gjibho8);
}
._34xydr8j {
  padding-top: 0;
}
._34xydr8n {
  padding-bottom: var(--_1gjibho0);
}
._34xydr8r {
  padding-bottom: var(--_1gjibho1);
}
._34xydr8v {
  padding-bottom: var(--_1gjibho2);
}
._34xydr8z {
  padding-bottom: var(--_1gjibho3);
}
._34xydr93 {
  padding-bottom: var(--_1gjibho4);
}
._34xydr97 {
  padding-bottom: var(--_1gjibho5);
}
._34xydr9b {
  padding-bottom: var(--_1gjibho6);
}
._34xydr9f {
  padding-bottom: var(--_1gjibho7);
}
._34xydr9j {
  padding-bottom: var(--_1gjibho8);
}
._34xydr9n {
  padding-bottom: 0;
}
._34xydr9r {
  padding-right: var(--_1gjibho0);
}
._34xydr9v {
  padding-right: var(--_1gjibho1);
}
._34xydr9z {
  padding-right: var(--_1gjibho2);
}
._34xydra3 {
  padding-right: var(--_1gjibho3);
}
._34xydra7 {
  padding-right: var(--_1gjibho4);
}
._34xydrab {
  padding-right: var(--_1gjibho5);
}
._34xydraf {
  padding-right: var(--_1gjibho6);
}
._34xydraj {
  padding-right: var(--_1gjibho7);
}
._34xydran {
  padding-right: var(--_1gjibho8);
}
._34xydrar {
  padding-right: 0;
}
._34xydrav {
  padding-left: var(--_1gjibho0);
}
._34xydraz {
  padding-left: var(--_1gjibho1);
}
._34xydrb3 {
  padding-left: var(--_1gjibho2);
}
._34xydrb7 {
  padding-left: var(--_1gjibho3);
}
._34xydrbb {
  padding-left: var(--_1gjibho4);
}
._34xydrbf {
  padding-left: var(--_1gjibho5);
}
._34xydrbj {
  padding-left: var(--_1gjibho6);
}
._34xydrbn {
  padding-left: var(--_1gjibho7);
}
._34xydrbr {
  padding-left: var(--_1gjibho8);
}
._34xydrbv {
  padding-left: 0;
}
._34xydrbz {
  margin-top: var(--_1gjibho0);
}
._34xydrc3 {
  margin-top: var(--_1gjibho1);
}
._34xydrc7 {
  margin-top: var(--_1gjibho2);
}
._34xydrcb {
  margin-top: var(--_1gjibho3);
}
._34xydrcf {
  margin-top: var(--_1gjibho4);
}
._34xydrcj {
  margin-top: var(--_1gjibho5);
}
._34xydrcn {
  margin-top: var(--_1gjibho6);
}
._34xydrcr {
  margin-top: var(--_1gjibho7);
}
._34xydrcv {
  margin-top: var(--_1gjibho8);
}
._34xydrcz {
  margin-top: 0;
}
._34xydrd3 {
  margin-bottom: var(--_1gjibho0);
}
._34xydrd7 {
  margin-bottom: var(--_1gjibho1);
}
._34xydrdb {
  margin-bottom: var(--_1gjibho2);
}
._34xydrdf {
  margin-bottom: var(--_1gjibho3);
}
._34xydrdj {
  margin-bottom: var(--_1gjibho4);
}
._34xydrdn {
  margin-bottom: var(--_1gjibho5);
}
._34xydrdr {
  margin-bottom: var(--_1gjibho6);
}
._34xydrdv {
  margin-bottom: var(--_1gjibho7);
}
._34xydrdz {
  margin-bottom: var(--_1gjibho8);
}
._34xydre3 {
  margin-bottom: 0;
}
._34xydre7 {
  margin-right: var(--_1gjibho0);
}
._34xydreb {
  margin-right: var(--_1gjibho1);
}
._34xydref {
  margin-right: var(--_1gjibho2);
}
._34xydrej {
  margin-right: var(--_1gjibho3);
}
._34xydren {
  margin-right: var(--_1gjibho4);
}
._34xydrer {
  margin-right: var(--_1gjibho5);
}
._34xydrev {
  margin-right: var(--_1gjibho6);
}
._34xydrez {
  margin-right: var(--_1gjibho7);
}
._34xydrf3 {
  margin-right: var(--_1gjibho8);
}
._34xydrf7 {
  margin-right: 0;
}
._34xydrfb {
  margin-left: var(--_1gjibho0);
}
._34xydrff {
  margin-left: var(--_1gjibho1);
}
._34xydrfj {
  margin-left: var(--_1gjibho2);
}
._34xydrfn {
  margin-left: var(--_1gjibho3);
}
._34xydrfr {
  margin-left: var(--_1gjibho4);
}
._34xydrfv {
  margin-left: var(--_1gjibho5);
}
._34xydrfz {
  margin-left: var(--_1gjibho6);
}
._34xydrg3 {
  margin-left: var(--_1gjibho7);
}
._34xydrg7 {
  margin-left: var(--_1gjibho8);
}
._34xydrgb {
  margin-left: 0;
}
._34xydrgf {
  align-items: flex-start;
}
._34xydrgj {
  align-items: center;
}
._34xydrgn {
  align-items: flex-end;
}
._34xydrgr {
  justify-content: flex-start;
}
._34xydrgv {
  justify-content: center;
}
._34xydrgz {
  justify-content: flex-end;
}
._34xydrh3 {
  justify-content: space-between;
}
._34xydrh7 {
  flex-direction: row;
}
._34xydrhb {
  flex-direction: row-reverse;
}
._34xydrhf {
  flex-direction: column;
}
._34xydrhj {
  flex-direction: column-reverse;
}
._34xydrhn {
  flex-wrap: wrap;
}
._34xydrhr {
  flex-wrap: nowrap;
}
._34xydrhv {
  flex-shrink: 0;
}
._34xydrhz {
  flex-grow: 0;
}
._34xydri3 {
  flex-grow: 1;
}
._34xydri7 {
  text-align: left;
}
._34xydrib {
  text-align: center;
}
._34xydrif {
  text-align: right;
}
@media screen and (min-width: 740px) {
  ._34xydr4w {
    display: none;
  }
  ._34xydr50 {
    display: block;
  }
  ._34xydr54 {
    display: inline;
  }
  ._34xydr58 {
    display: inline-block;
  }
  ._34xydr5c {
    display: flex;
  }
  ._34xydr5g {
    position: relative;
  }
  ._34xydr5k {
    position: absolute;
  }
  ._34xydr5o {
    position: fixed;
  }
  ._34xydr5s {
    border-radius: 0;
  }
  ._34xydr5w {
    border-radius: 9999px;
  }
  ._34xydr60 {
    border-radius: var(--_1gjibhob);
  }
  ._34xydr64 {
    border-radius: var(--_1gjibhoc);
  }
  ._34xydr68 {
    border-radius: var(--_1gjibhod);
  }
  ._34xydr6c {
    border-radius: var(--_1gjibhoe);
  }
  ._34xydr6g {
    gap: var(--_1gjibho0);
  }
  ._34xydr6k {
    gap: var(--_1gjibho1);
  }
  ._34xydr6o {
    gap: var(--_1gjibho2);
  }
  ._34xydr6s {
    gap: var(--_1gjibho3);
  }
  ._34xydr6w {
    gap: var(--_1gjibho4);
  }
  ._34xydr70 {
    gap: var(--_1gjibho5);
  }
  ._34xydr74 {
    gap: var(--_1gjibho6);
  }
  ._34xydr78 {
    gap: var(--_1gjibho7);
  }
  ._34xydr7c {
    gap: var(--_1gjibho8);
  }
  ._34xydr7g {
    gap: 0;
  }
  ._34xydr7k {
    padding-top: var(--_1gjibho0);
  }
  ._34xydr7o {
    padding-top: var(--_1gjibho1);
  }
  ._34xydr7s {
    padding-top: var(--_1gjibho2);
  }
  ._34xydr7w {
    padding-top: var(--_1gjibho3);
  }
  ._34xydr80 {
    padding-top: var(--_1gjibho4);
  }
  ._34xydr84 {
    padding-top: var(--_1gjibho5);
  }
  ._34xydr88 {
    padding-top: var(--_1gjibho6);
  }
  ._34xydr8c {
    padding-top: var(--_1gjibho7);
  }
  ._34xydr8g {
    padding-top: var(--_1gjibho8);
  }
  ._34xydr8k {
    padding-top: 0;
  }
  ._34xydr8o {
    padding-bottom: var(--_1gjibho0);
  }
  ._34xydr8s {
    padding-bottom: var(--_1gjibho1);
  }
  ._34xydr8w {
    padding-bottom: var(--_1gjibho2);
  }
  ._34xydr90 {
    padding-bottom: var(--_1gjibho3);
  }
  ._34xydr94 {
    padding-bottom: var(--_1gjibho4);
  }
  ._34xydr98 {
    padding-bottom: var(--_1gjibho5);
  }
  ._34xydr9c {
    padding-bottom: var(--_1gjibho6);
  }
  ._34xydr9g {
    padding-bottom: var(--_1gjibho7);
  }
  ._34xydr9k {
    padding-bottom: var(--_1gjibho8);
  }
  ._34xydr9o {
    padding-bottom: 0;
  }
  ._34xydr9s {
    padding-right: var(--_1gjibho0);
  }
  ._34xydr9w {
    padding-right: var(--_1gjibho1);
  }
  ._34xydra0 {
    padding-right: var(--_1gjibho2);
  }
  ._34xydra4 {
    padding-right: var(--_1gjibho3);
  }
  ._34xydra8 {
    padding-right: var(--_1gjibho4);
  }
  ._34xydrac {
    padding-right: var(--_1gjibho5);
  }
  ._34xydrag {
    padding-right: var(--_1gjibho6);
  }
  ._34xydrak {
    padding-right: var(--_1gjibho7);
  }
  ._34xydrao {
    padding-right: var(--_1gjibho8);
  }
  ._34xydras {
    padding-right: 0;
  }
  ._34xydraw {
    padding-left: var(--_1gjibho0);
  }
  ._34xydrb0 {
    padding-left: var(--_1gjibho1);
  }
  ._34xydrb4 {
    padding-left: var(--_1gjibho2);
  }
  ._34xydrb8 {
    padding-left: var(--_1gjibho3);
  }
  ._34xydrbc {
    padding-left: var(--_1gjibho4);
  }
  ._34xydrbg {
    padding-left: var(--_1gjibho5);
  }
  ._34xydrbk {
    padding-left: var(--_1gjibho6);
  }
  ._34xydrbo {
    padding-left: var(--_1gjibho7);
  }
  ._34xydrbs {
    padding-left: var(--_1gjibho8);
  }
  ._34xydrbw {
    padding-left: 0;
  }
  ._34xydrc0 {
    margin-top: var(--_1gjibho0);
  }
  ._34xydrc4 {
    margin-top: var(--_1gjibho1);
  }
  ._34xydrc8 {
    margin-top: var(--_1gjibho2);
  }
  ._34xydrcc {
    margin-top: var(--_1gjibho3);
  }
  ._34xydrcg {
    margin-top: var(--_1gjibho4);
  }
  ._34xydrck {
    margin-top: var(--_1gjibho5);
  }
  ._34xydrco {
    margin-top: var(--_1gjibho6);
  }
  ._34xydrcs {
    margin-top: var(--_1gjibho7);
  }
  ._34xydrcw {
    margin-top: var(--_1gjibho8);
  }
  ._34xydrd0 {
    margin-top: 0;
  }
  ._34xydrd4 {
    margin-bottom: var(--_1gjibho0);
  }
  ._34xydrd8 {
    margin-bottom: var(--_1gjibho1);
  }
  ._34xydrdc {
    margin-bottom: var(--_1gjibho2);
  }
  ._34xydrdg {
    margin-bottom: var(--_1gjibho3);
  }
  ._34xydrdk {
    margin-bottom: var(--_1gjibho4);
  }
  ._34xydrdo {
    margin-bottom: var(--_1gjibho5);
  }
  ._34xydrds {
    margin-bottom: var(--_1gjibho6);
  }
  ._34xydrdw {
    margin-bottom: var(--_1gjibho7);
  }
  ._34xydre0 {
    margin-bottom: var(--_1gjibho8);
  }
  ._34xydre4 {
    margin-bottom: 0;
  }
  ._34xydre8 {
    margin-right: var(--_1gjibho0);
  }
  ._34xydrec {
    margin-right: var(--_1gjibho1);
  }
  ._34xydreg {
    margin-right: var(--_1gjibho2);
  }
  ._34xydrek {
    margin-right: var(--_1gjibho3);
  }
  ._34xydreo {
    margin-right: var(--_1gjibho4);
  }
  ._34xydres {
    margin-right: var(--_1gjibho5);
  }
  ._34xydrew {
    margin-right: var(--_1gjibho6);
  }
  ._34xydrf0 {
    margin-right: var(--_1gjibho7);
  }
  ._34xydrf4 {
    margin-right: var(--_1gjibho8);
  }
  ._34xydrf8 {
    margin-right: 0;
  }
  ._34xydrfc {
    margin-left: var(--_1gjibho0);
  }
  ._34xydrfg {
    margin-left: var(--_1gjibho1);
  }
  ._34xydrfk {
    margin-left: var(--_1gjibho2);
  }
  ._34xydrfo {
    margin-left: var(--_1gjibho3);
  }
  ._34xydrfs {
    margin-left: var(--_1gjibho4);
  }
  ._34xydrfw {
    margin-left: var(--_1gjibho5);
  }
  ._34xydrg0 {
    margin-left: var(--_1gjibho6);
  }
  ._34xydrg4 {
    margin-left: var(--_1gjibho7);
  }
  ._34xydrg8 {
    margin-left: var(--_1gjibho8);
  }
  ._34xydrgc {
    margin-left: 0;
  }
  ._34xydrgg {
    align-items: flex-start;
  }
  ._34xydrgk {
    align-items: center;
  }
  ._34xydrgo {
    align-items: flex-end;
  }
  ._34xydrgs {
    justify-content: flex-start;
  }
  ._34xydrgw {
    justify-content: center;
  }
  ._34xydrh0 {
    justify-content: flex-end;
  }
  ._34xydrh4 {
    justify-content: space-between;
  }
  ._34xydrh8 {
    flex-direction: row;
  }
  ._34xydrhc {
    flex-direction: row-reverse;
  }
  ._34xydrhg {
    flex-direction: column;
  }
  ._34xydrhk {
    flex-direction: column-reverse;
  }
  ._34xydrho {
    flex-wrap: wrap;
  }
  ._34xydrhs {
    flex-wrap: nowrap;
  }
  ._34xydrhw {
    flex-shrink: 0;
  }
  ._34xydri0 {
    flex-grow: 0;
  }
  ._34xydri4 {
    flex-grow: 1;
  }
  ._34xydri8 {
    text-align: left;
  }
  ._34xydric {
    text-align: center;
  }
  ._34xydrig {
    text-align: right;
  }
}
@media screen and (min-width: 992px) {
  ._34xydr4x {
    display: none;
  }
  ._34xydr51 {
    display: block;
  }
  ._34xydr55 {
    display: inline;
  }
  ._34xydr59 {
    display: inline-block;
  }
  ._34xydr5d {
    display: flex;
  }
  ._34xydr5h {
    position: relative;
  }
  ._34xydr5l {
    position: absolute;
  }
  ._34xydr5p {
    position: fixed;
  }
  ._34xydr5t {
    border-radius: 0;
  }
  ._34xydr5x {
    border-radius: 9999px;
  }
  ._34xydr61 {
    border-radius: var(--_1gjibhob);
  }
  ._34xydr65 {
    border-radius: var(--_1gjibhoc);
  }
  ._34xydr69 {
    border-radius: var(--_1gjibhod);
  }
  ._34xydr6d {
    border-radius: var(--_1gjibhoe);
  }
  ._34xydr6h {
    gap: var(--_1gjibho0);
  }
  ._34xydr6l {
    gap: var(--_1gjibho1);
  }
  ._34xydr6p {
    gap: var(--_1gjibho2);
  }
  ._34xydr6t {
    gap: var(--_1gjibho3);
  }
  ._34xydr6x {
    gap: var(--_1gjibho4);
  }
  ._34xydr71 {
    gap: var(--_1gjibho5);
  }
  ._34xydr75 {
    gap: var(--_1gjibho6);
  }
  ._34xydr79 {
    gap: var(--_1gjibho7);
  }
  ._34xydr7d {
    gap: var(--_1gjibho8);
  }
  ._34xydr7h {
    gap: 0;
  }
  ._34xydr7l {
    padding-top: var(--_1gjibho0);
  }
  ._34xydr7p {
    padding-top: var(--_1gjibho1);
  }
  ._34xydr7t {
    padding-top: var(--_1gjibho2);
  }
  ._34xydr7x {
    padding-top: var(--_1gjibho3);
  }
  ._34xydr81 {
    padding-top: var(--_1gjibho4);
  }
  ._34xydr85 {
    padding-top: var(--_1gjibho5);
  }
  ._34xydr89 {
    padding-top: var(--_1gjibho6);
  }
  ._34xydr8d {
    padding-top: var(--_1gjibho7);
  }
  ._34xydr8h {
    padding-top: var(--_1gjibho8);
  }
  ._34xydr8l {
    padding-top: 0;
  }
  ._34xydr8p {
    padding-bottom: var(--_1gjibho0);
  }
  ._34xydr8t {
    padding-bottom: var(--_1gjibho1);
  }
  ._34xydr8x {
    padding-bottom: var(--_1gjibho2);
  }
  ._34xydr91 {
    padding-bottom: var(--_1gjibho3);
  }
  ._34xydr95 {
    padding-bottom: var(--_1gjibho4);
  }
  ._34xydr99 {
    padding-bottom: var(--_1gjibho5);
  }
  ._34xydr9d {
    padding-bottom: var(--_1gjibho6);
  }
  ._34xydr9h {
    padding-bottom: var(--_1gjibho7);
  }
  ._34xydr9l {
    padding-bottom: var(--_1gjibho8);
  }
  ._34xydr9p {
    padding-bottom: 0;
  }
  ._34xydr9t {
    padding-right: var(--_1gjibho0);
  }
  ._34xydr9x {
    padding-right: var(--_1gjibho1);
  }
  ._34xydra1 {
    padding-right: var(--_1gjibho2);
  }
  ._34xydra5 {
    padding-right: var(--_1gjibho3);
  }
  ._34xydra9 {
    padding-right: var(--_1gjibho4);
  }
  ._34xydrad {
    padding-right: var(--_1gjibho5);
  }
  ._34xydrah {
    padding-right: var(--_1gjibho6);
  }
  ._34xydral {
    padding-right: var(--_1gjibho7);
  }
  ._34xydrap {
    padding-right: var(--_1gjibho8);
  }
  ._34xydrat {
    padding-right: 0;
  }
  ._34xydrax {
    padding-left: var(--_1gjibho0);
  }
  ._34xydrb1 {
    padding-left: var(--_1gjibho1);
  }
  ._34xydrb5 {
    padding-left: var(--_1gjibho2);
  }
  ._34xydrb9 {
    padding-left: var(--_1gjibho3);
  }
  ._34xydrbd {
    padding-left: var(--_1gjibho4);
  }
  ._34xydrbh {
    padding-left: var(--_1gjibho5);
  }
  ._34xydrbl {
    padding-left: var(--_1gjibho6);
  }
  ._34xydrbp {
    padding-left: var(--_1gjibho7);
  }
  ._34xydrbt {
    padding-left: var(--_1gjibho8);
  }
  ._34xydrbx {
    padding-left: 0;
  }
  ._34xydrc1 {
    margin-top: var(--_1gjibho0);
  }
  ._34xydrc5 {
    margin-top: var(--_1gjibho1);
  }
  ._34xydrc9 {
    margin-top: var(--_1gjibho2);
  }
  ._34xydrcd {
    margin-top: var(--_1gjibho3);
  }
  ._34xydrch {
    margin-top: var(--_1gjibho4);
  }
  ._34xydrcl {
    margin-top: var(--_1gjibho5);
  }
  ._34xydrcp {
    margin-top: var(--_1gjibho6);
  }
  ._34xydrct {
    margin-top: var(--_1gjibho7);
  }
  ._34xydrcx {
    margin-top: var(--_1gjibho8);
  }
  ._34xydrd1 {
    margin-top: 0;
  }
  ._34xydrd5 {
    margin-bottom: var(--_1gjibho0);
  }
  ._34xydrd9 {
    margin-bottom: var(--_1gjibho1);
  }
  ._34xydrdd {
    margin-bottom: var(--_1gjibho2);
  }
  ._34xydrdh {
    margin-bottom: var(--_1gjibho3);
  }
  ._34xydrdl {
    margin-bottom: var(--_1gjibho4);
  }
  ._34xydrdp {
    margin-bottom: var(--_1gjibho5);
  }
  ._34xydrdt {
    margin-bottom: var(--_1gjibho6);
  }
  ._34xydrdx {
    margin-bottom: var(--_1gjibho7);
  }
  ._34xydre1 {
    margin-bottom: var(--_1gjibho8);
  }
  ._34xydre5 {
    margin-bottom: 0;
  }
  ._34xydre9 {
    margin-right: var(--_1gjibho0);
  }
  ._34xydred {
    margin-right: var(--_1gjibho1);
  }
  ._34xydreh {
    margin-right: var(--_1gjibho2);
  }
  ._34xydrel {
    margin-right: var(--_1gjibho3);
  }
  ._34xydrep {
    margin-right: var(--_1gjibho4);
  }
  ._34xydret {
    margin-right: var(--_1gjibho5);
  }
  ._34xydrex {
    margin-right: var(--_1gjibho6);
  }
  ._34xydrf1 {
    margin-right: var(--_1gjibho7);
  }
  ._34xydrf5 {
    margin-right: var(--_1gjibho8);
  }
  ._34xydrf9 {
    margin-right: 0;
  }
  ._34xydrfd {
    margin-left: var(--_1gjibho0);
  }
  ._34xydrfh {
    margin-left: var(--_1gjibho1);
  }
  ._34xydrfl {
    margin-left: var(--_1gjibho2);
  }
  ._34xydrfp {
    margin-left: var(--_1gjibho3);
  }
  ._34xydrft {
    margin-left: var(--_1gjibho4);
  }
  ._34xydrfx {
    margin-left: var(--_1gjibho5);
  }
  ._34xydrg1 {
    margin-left: var(--_1gjibho6);
  }
  ._34xydrg5 {
    margin-left: var(--_1gjibho7);
  }
  ._34xydrg9 {
    margin-left: var(--_1gjibho8);
  }
  ._34xydrgd {
    margin-left: 0;
  }
  ._34xydrgh {
    align-items: flex-start;
  }
  ._34xydrgl {
    align-items: center;
  }
  ._34xydrgp {
    align-items: flex-end;
  }
  ._34xydrgt {
    justify-content: flex-start;
  }
  ._34xydrgx {
    justify-content: center;
  }
  ._34xydrh1 {
    justify-content: flex-end;
  }
  ._34xydrh5 {
    justify-content: space-between;
  }
  ._34xydrh9 {
    flex-direction: row;
  }
  ._34xydrhd {
    flex-direction: row-reverse;
  }
  ._34xydrhh {
    flex-direction: column;
  }
  ._34xydrhl {
    flex-direction: column-reverse;
  }
  ._34xydrhp {
    flex-wrap: wrap;
  }
  ._34xydrht {
    flex-wrap: nowrap;
  }
  ._34xydrhx {
    flex-shrink: 0;
  }
  ._34xydri1 {
    flex-grow: 0;
  }
  ._34xydri5 {
    flex-grow: 1;
  }
  ._34xydri9 {
    text-align: left;
  }
  ._34xydrid {
    text-align: center;
  }
  ._34xydrih {
    text-align: right;
  }
}
@media screen and (min-width: 1200px) {
  ._34xydr4y {
    display: none;
  }
  ._34xydr52 {
    display: block;
  }
  ._34xydr56 {
    display: inline;
  }
  ._34xydr5a {
    display: inline-block;
  }
  ._34xydr5e {
    display: flex;
  }
  ._34xydr5i {
    position: relative;
  }
  ._34xydr5m {
    position: absolute;
  }
  ._34xydr5q {
    position: fixed;
  }
  ._34xydr5u {
    border-radius: 0;
  }
  ._34xydr5y {
    border-radius: 9999px;
  }
  ._34xydr62 {
    border-radius: var(--_1gjibhob);
  }
  ._34xydr66 {
    border-radius: var(--_1gjibhoc);
  }
  ._34xydr6a {
    border-radius: var(--_1gjibhod);
  }
  ._34xydr6e {
    border-radius: var(--_1gjibhoe);
  }
  ._34xydr6i {
    gap: var(--_1gjibho0);
  }
  ._34xydr6m {
    gap: var(--_1gjibho1);
  }
  ._34xydr6q {
    gap: var(--_1gjibho2);
  }
  ._34xydr6u {
    gap: var(--_1gjibho3);
  }
  ._34xydr6y {
    gap: var(--_1gjibho4);
  }
  ._34xydr72 {
    gap: var(--_1gjibho5);
  }
  ._34xydr76 {
    gap: var(--_1gjibho6);
  }
  ._34xydr7a {
    gap: var(--_1gjibho7);
  }
  ._34xydr7e {
    gap: var(--_1gjibho8);
  }
  ._34xydr7i {
    gap: 0;
  }
  ._34xydr7m {
    padding-top: var(--_1gjibho0);
  }
  ._34xydr7q {
    padding-top: var(--_1gjibho1);
  }
  ._34xydr7u {
    padding-top: var(--_1gjibho2);
  }
  ._34xydr7y {
    padding-top: var(--_1gjibho3);
  }
  ._34xydr82 {
    padding-top: var(--_1gjibho4);
  }
  ._34xydr86 {
    padding-top: var(--_1gjibho5);
  }
  ._34xydr8a {
    padding-top: var(--_1gjibho6);
  }
  ._34xydr8e {
    padding-top: var(--_1gjibho7);
  }
  ._34xydr8i {
    padding-top: var(--_1gjibho8);
  }
  ._34xydr8m {
    padding-top: 0;
  }
  ._34xydr8q {
    padding-bottom: var(--_1gjibho0);
  }
  ._34xydr8u {
    padding-bottom: var(--_1gjibho1);
  }
  ._34xydr8y {
    padding-bottom: var(--_1gjibho2);
  }
  ._34xydr92 {
    padding-bottom: var(--_1gjibho3);
  }
  ._34xydr96 {
    padding-bottom: var(--_1gjibho4);
  }
  ._34xydr9a {
    padding-bottom: var(--_1gjibho5);
  }
  ._34xydr9e {
    padding-bottom: var(--_1gjibho6);
  }
  ._34xydr9i {
    padding-bottom: var(--_1gjibho7);
  }
  ._34xydr9m {
    padding-bottom: var(--_1gjibho8);
  }
  ._34xydr9q {
    padding-bottom: 0;
  }
  ._34xydr9u {
    padding-right: var(--_1gjibho0);
  }
  ._34xydr9y {
    padding-right: var(--_1gjibho1);
  }
  ._34xydra2 {
    padding-right: var(--_1gjibho2);
  }
  ._34xydra6 {
    padding-right: var(--_1gjibho3);
  }
  ._34xydraa {
    padding-right: var(--_1gjibho4);
  }
  ._34xydrae {
    padding-right: var(--_1gjibho5);
  }
  ._34xydrai {
    padding-right: var(--_1gjibho6);
  }
  ._34xydram {
    padding-right: var(--_1gjibho7);
  }
  ._34xydraq {
    padding-right: var(--_1gjibho8);
  }
  ._34xydrau {
    padding-right: 0;
  }
  ._34xydray {
    padding-left: var(--_1gjibho0);
  }
  ._34xydrb2 {
    padding-left: var(--_1gjibho1);
  }
  ._34xydrb6 {
    padding-left: var(--_1gjibho2);
  }
  ._34xydrba {
    padding-left: var(--_1gjibho3);
  }
  ._34xydrbe {
    padding-left: var(--_1gjibho4);
  }
  ._34xydrbi {
    padding-left: var(--_1gjibho5);
  }
  ._34xydrbm {
    padding-left: var(--_1gjibho6);
  }
  ._34xydrbq {
    padding-left: var(--_1gjibho7);
  }
  ._34xydrbu {
    padding-left: var(--_1gjibho8);
  }
  ._34xydrby {
    padding-left: 0;
  }
  ._34xydrc2 {
    margin-top: var(--_1gjibho0);
  }
  ._34xydrc6 {
    margin-top: var(--_1gjibho1);
  }
  ._34xydrca {
    margin-top: var(--_1gjibho2);
  }
  ._34xydrce {
    margin-top: var(--_1gjibho3);
  }
  ._34xydrci {
    margin-top: var(--_1gjibho4);
  }
  ._34xydrcm {
    margin-top: var(--_1gjibho5);
  }
  ._34xydrcq {
    margin-top: var(--_1gjibho6);
  }
  ._34xydrcu {
    margin-top: var(--_1gjibho7);
  }
  ._34xydrcy {
    margin-top: var(--_1gjibho8);
  }
  ._34xydrd2 {
    margin-top: 0;
  }
  ._34xydrd6 {
    margin-bottom: var(--_1gjibho0);
  }
  ._34xydrda {
    margin-bottom: var(--_1gjibho1);
  }
  ._34xydrde {
    margin-bottom: var(--_1gjibho2);
  }
  ._34xydrdi {
    margin-bottom: var(--_1gjibho3);
  }
  ._34xydrdm {
    margin-bottom: var(--_1gjibho4);
  }
  ._34xydrdq {
    margin-bottom: var(--_1gjibho5);
  }
  ._34xydrdu {
    margin-bottom: var(--_1gjibho6);
  }
  ._34xydrdy {
    margin-bottom: var(--_1gjibho7);
  }
  ._34xydre2 {
    margin-bottom: var(--_1gjibho8);
  }
  ._34xydre6 {
    margin-bottom: 0;
  }
  ._34xydrea {
    margin-right: var(--_1gjibho0);
  }
  ._34xydree {
    margin-right: var(--_1gjibho1);
  }
  ._34xydrei {
    margin-right: var(--_1gjibho2);
  }
  ._34xydrem {
    margin-right: var(--_1gjibho3);
  }
  ._34xydreq {
    margin-right: var(--_1gjibho4);
  }
  ._34xydreu {
    margin-right: var(--_1gjibho5);
  }
  ._34xydrey {
    margin-right: var(--_1gjibho6);
  }
  ._34xydrf2 {
    margin-right: var(--_1gjibho7);
  }
  ._34xydrf6 {
    margin-right: var(--_1gjibho8);
  }
  ._34xydrfa {
    margin-right: 0;
  }
  ._34xydrfe {
    margin-left: var(--_1gjibho0);
  }
  ._34xydrfi {
    margin-left: var(--_1gjibho1);
  }
  ._34xydrfm {
    margin-left: var(--_1gjibho2);
  }
  ._34xydrfq {
    margin-left: var(--_1gjibho3);
  }
  ._34xydrfu {
    margin-left: var(--_1gjibho4);
  }
  ._34xydrfy {
    margin-left: var(--_1gjibho5);
  }
  ._34xydrg2 {
    margin-left: var(--_1gjibho6);
  }
  ._34xydrg6 {
    margin-left: var(--_1gjibho7);
  }
  ._34xydrga {
    margin-left: var(--_1gjibho8);
  }
  ._34xydrge {
    margin-left: 0;
  }
  ._34xydrgi {
    align-items: flex-start;
  }
  ._34xydrgm {
    align-items: center;
  }
  ._34xydrgq {
    align-items: flex-end;
  }
  ._34xydrgu {
    justify-content: flex-start;
  }
  ._34xydrgy {
    justify-content: center;
  }
  ._34xydrh2 {
    justify-content: flex-end;
  }
  ._34xydrh6 {
    justify-content: space-between;
  }
  ._34xydrha {
    flex-direction: row;
  }
  ._34xydrhe {
    flex-direction: row-reverse;
  }
  ._34xydrhi {
    flex-direction: column;
  }
  ._34xydrhm {
    flex-direction: column-reverse;
  }
  ._34xydrhq {
    flex-wrap: wrap;
  }
  ._34xydrhu {
    flex-wrap: nowrap;
  }
  ._34xydrhy {
    flex-shrink: 0;
  }
  ._34xydri2 {
    flex-grow: 0;
  }
  ._34xydri6 {
    flex-grow: 1;
  }
  ._34xydria {
    text-align: left;
  }
  ._34xydrie {
    text-align: center;
  }
  ._34xydrii {
    text-align: right;
  }
}
._1gtekyg4 {
  font-size: var(--_1gtekyg0);
  line-height: var(--_1gtekyg1);
}
._1gtekyg4:before {
  content: "";
  display: table;
  margin-bottom: var(--_1gtekyg2);
}
._1gtekyg4:after {
  content: "";
  display: table;
  margin-top: var(--_1gtekyg3);
}
.m7ctzi0 {
  font-family: var(--_1gjibho2w);
}
.m7ctzi1 {
  font-weight: var(--_1gjibho46);
}
.m7ctzi2 {
  font-weight: var(--_1gjibho47);
}
.m7ctzi3 {
  font-weight: var(--_1gjibho48);
}
.m7ctzi4 {
  --_1gtekyg0: var(--_1gjibho32);
  --_1gtekyg1: var(--_1gjibho33);
  --_1gtekyg2: var(--_1gjibho35);
  --_1gtekyg3: var(--_1gjibho36);
}
.m7ctzi7 {
  --_1gtekyg0: var(--_1gjibho3c);
  --_1gtekyg1: var(--_1gjibho3d);
  --_1gtekyg2: var(--_1gjibho3f);
  --_1gtekyg3: var(--_1gjibho3g);
}
.m7ctzia {
  --_1gtekyg0: var(--_1gjibho3m);
  --_1gtekyg1: var(--_1gjibho3n);
  --_1gtekyg2: var(--_1gjibho3p);
  --_1gtekyg3: var(--_1gjibho3q);
}
.m7ctzid {
  --_1gtekyg0: var(--_1gjibho3w);
  --_1gtekyg1: var(--_1gjibho3x);
  --_1gtekyg2: var(--_1gjibho3z);
  --_1gtekyg3: var(--_1gjibho40);
}
.m7ctzig {
  font-size: var(--_1gjibho32);
  line-height: var(--_1gjibho33);
}
.m7ctzih {
  font-size: var(--_1gjibho3c);
  line-height: var(--_1gjibho3d);
}
.m7ctzii {
  font-size: var(--_1gjibho3m);
  line-height: var(--_1gjibho3n);
}
.m7ctzij {
  font-size: var(--_1gjibho3w);
  line-height: var(--_1gjibho3x);
}
.m7ctzik {
  font-weight: var(--_1gjibho5d);
}
.m7ctzil {
  font-weight: var(--_1gjibho5e);
}
.m7ctzim {
  --_1gtekyg0: var(--_1gjibho49);
  --_1gtekyg1: var(--_1gjibho4a);
  --_1gtekyg2: var(--_1gjibho4c);
  --_1gtekyg3: var(--_1gjibho4d);
}
.m7ctzip {
  --_1gtekyg0: var(--_1gjibho4j);
  --_1gtekyg1: var(--_1gjibho4k);
  --_1gtekyg2: var(--_1gjibho4m);
  --_1gtekyg3: var(--_1gjibho4n);
}
.m7ctzis {
  --_1gtekyg0: var(--_1gjibho4t);
  --_1gtekyg1: var(--_1gjibho4u);
  --_1gtekyg2: var(--_1gjibho4w);
  --_1gtekyg3: var(--_1gjibho4x);
}
.m7ctziv {
  --_1gtekyg0: var(--_1gjibho53);
  --_1gtekyg1: var(--_1gjibho54);
  --_1gtekyg2: var(--_1gjibho56);
  --_1gtekyg3: var(--_1gjibho57);
}
html:not(._34xydr10) .m7ctzi18 {
  --m7ctziy: var(--_1gjibho19);
  --m7ctziz: var(--_1gjibho17);
  --m7ctzi10: var(--_1gjibho1d);
  --m7ctzi11: var(--_1gjibho1o);
  --m7ctzi12: var(--_1gjibho1m);
  --m7ctzi13: var(--_1gjibho15);
  --m7ctzi14: var(--_1gjibho1b);
  --m7ctzi15: var(--_1gjibho1k);
  --m7ctzi16: var(--_1gjibho1r);
  --m7ctzi17: var(--_1gjibho1f);
}
html:not(._34xydr10) .m7ctzi19 {
  --m7ctziy: var(--_1gjibho1a);
  --m7ctziz: var(--_1gjibho18);
  --m7ctzi10: var(--_1gjibho1e);
  --m7ctzi11: var(--_1gjibho1p);
  --m7ctzi12: var(--_1gjibho1n);
  --m7ctzi13: var(--_1gjibho16);
  --m7ctzi14: var(--_1gjibho1c);
  --m7ctzi15: var(--_1gjibho1l);
  --m7ctzi16: var(--_1gjibho1s);
  --m7ctzi17: var(--_1gjibho1h);
}
html._34xydr10 .m7ctzi1a {
  --m7ctziy: var(--_1gjibho19);
  --m7ctziz: var(--_1gjibho17);
  --m7ctzi10: var(--_1gjibho1d);
  --m7ctzi11: var(--_1gjibho1o);
  --m7ctzi12: var(--_1gjibho1m);
  --m7ctzi13: var(--_1gjibho15);
  --m7ctzi14: var(--_1gjibho1b);
  --m7ctzi15: var(--_1gjibho1k);
  --m7ctzi16: var(--_1gjibho1r);
  --m7ctzi17: var(--_1gjibho1f);
}
html._34xydr10 .m7ctzi1b {
  --m7ctziy: var(--_1gjibho1a);
  --m7ctziz: var(--_1gjibho18);
  --m7ctzi10: var(--_1gjibho1e);
  --m7ctzi11: var(--_1gjibho1p);
  --m7ctzi12: var(--_1gjibho1n);
  --m7ctzi13: var(--_1gjibho16);
  --m7ctzi14: var(--_1gjibho1c);
  --m7ctzi15: var(--_1gjibho1l);
  --m7ctzi16: var(--_1gjibho1s);
  --m7ctzi17: var(--_1gjibho1h);
}
html:not(._34xydr10) .m7ctzi1c,
html:not(._34xydr10) .m7ctzi1d,
html:not(._34xydr10) .m7ctzi1e,
html:not(._34xydr10) .m7ctzi1f {
  --m7ctzi15: var(--m7ctziy);
}
html:not(._34xydr10) .m7ctzi1g,
html:not(._34xydr10) .m7ctzi1h {
  --m7ctzi15: var(--m7ctziz);
}
html:not(._34xydr10) .m7ctzi1i {
  --m7ctzi15: var(--m7ctzi12);
}
html:not(._34xydr10) .m7ctzi1j {
  --m7ctzi15: var(--m7ctzi10);
}
html:not(._34xydr10) .m7ctzi1k {
  --m7ctzi15: var(--m7ctzi11);
}
html._34xydr10 .m7ctzi1l,
html._34xydr10 .m7ctzi1m,
html._34xydr10 .m7ctzi1n,
html._34xydr10 .m7ctzi1o {
  --m7ctzi15: var(--m7ctziy);
}
html._34xydr10 .m7ctzi1p,
html._34xydr10 .m7ctzi1q {
  --m7ctzi15: var(--m7ctziz);
}
html._34xydr10 .m7ctzi1r {
  --m7ctzi15: var(--m7ctzi12);
}
html._34xydr10 .m7ctzi1s {
  --m7ctzi15: var(--m7ctzi10);
}
html._34xydr10 .m7ctzi1t {
  --m7ctzi15: var(--m7ctzi11);
}
.m7ctzi1u {
  color: var(--m7ctziy);
}
.m7ctzi1v {
  color: var(--m7ctziz);
}
.m7ctzi1w {
  color: var(--m7ctzi10);
}
.m7ctzi1x {
  color: var(--m7ctzi11);
}
.m7ctzi1y {
  color: var(--m7ctzi12);
}
.m7ctzi1z {
  color: var(--m7ctzi13);
}
.m7ctzi20 {
  color: var(--m7ctzi14);
}
.m7ctzi21 {
  color: var(--m7ctzi15);
}
.m7ctzi22 {
  color: var(--m7ctzi16);
}
.m7ctzi23 {
  color: var(--m7ctzi17);
}
.m7ctzi24 {
  padding-bottom: calc((var(--_1gjibho9) - var(--_1gjibho33)) / 2);
  padding-top: calc((var(--_1gjibho9) - var(--_1gjibho33)) / 2);
}
.m7ctzi25 {
  padding-bottom: calc((var(--_1gjibho9) - var(--_1gjibho3d)) / 2);
  padding-top: calc((var(--_1gjibho9) - var(--_1gjibho3d)) / 2);
}
.m7ctzi26 {
  padding-bottom: calc((var(--_1gjibho9) - var(--_1gjibho3n)) / 2);
  padding-top: calc((var(--_1gjibho9) - var(--_1gjibho3n)) / 2);
}
.m7ctzi27 {
  padding-bottom: calc((var(--_1gjibho9) - var(--_1gjibho3x)) / 2);
  padding-top: calc((var(--_1gjibho9) - var(--_1gjibho3x)) / 2);
}
@media screen and (min-width: 740px) {
  .m7ctzi4 {
    --_1gtekyg0: var(--_1gjibho37);
    --_1gtekyg1: var(--_1gjibho38);
    --_1gtekyg2: var(--_1gjibho3a);
    --_1gtekyg3: var(--_1gjibho3b);
  }
  .m7ctzi7 {
    --_1gtekyg0: var(--_1gjibho3h);
    --_1gtekyg1: var(--_1gjibho3i);
    --_1gtekyg2: var(--_1gjibho3k);
    --_1gtekyg3: var(--_1gjibho3l);
  }
  .m7ctzia {
    --_1gtekyg0: var(--_1gjibho3r);
    --_1gtekyg1: var(--_1gjibho3s);
    --_1gtekyg2: var(--_1gjibho3u);
    --_1gtekyg3: var(--_1gjibho3v);
  }
  .m7ctzid {
    --_1gtekyg0: var(--_1gjibho41);
    --_1gtekyg1: var(--_1gjibho42);
    --_1gtekyg2: var(--_1gjibho44);
    --_1gtekyg3: var(--_1gjibho45);
  }
  .m7ctzig {
    font-size: var(--_1gjibho37);
    line-height: var(--_1gjibho38);
  }
  .m7ctzih {
    font-size: var(--_1gjibho3h);
    line-height: var(--_1gjibho3i);
  }
  .m7ctzii {
    font-size: var(--_1gjibho3r);
    line-height: var(--_1gjibho3s);
  }
  .m7ctzij {
    font-size: var(--_1gjibho41);
    line-height: var(--_1gjibho42);
  }
  .m7ctzim {
    --_1gtekyg0: var(--_1gjibho4e);
    --_1gtekyg1: var(--_1gjibho4f);
    --_1gtekyg2: var(--_1gjibho4h);
    --_1gtekyg3: var(--_1gjibho4i);
  }
  .m7ctzip {
    --_1gtekyg0: var(--_1gjibho4o);
    --_1gtekyg1: var(--_1gjibho4p);
    --_1gtekyg2: var(--_1gjibho4r);
    --_1gtekyg3: var(--_1gjibho4s);
  }
  .m7ctzis {
    --_1gtekyg0: var(--_1gjibho4y);
    --_1gtekyg1: var(--_1gjibho4z);
    --_1gtekyg2: var(--_1gjibho51);
    --_1gtekyg3: var(--_1gjibho52);
  }
  .m7ctziv {
    --_1gtekyg0: var(--_1gjibho58);
    --_1gtekyg1: var(--_1gjibho59);
    --_1gtekyg2: var(--_1gjibho5b);
    --_1gtekyg3: var(--_1gjibho5c);
  }
  .m7ctzi24 {
    padding-bottom: calc((var(--_1gjibho9) - var(--_1gjibho38)) / 2);
    padding-top: calc((var(--_1gjibho9) - var(--_1gjibho38)) / 2);
  }
  .m7ctzi25 {
    padding-bottom: calc((var(--_1gjibho9) - var(--_1gjibho3i)) / 2);
    padding-top: calc((var(--_1gjibho9) - var(--_1gjibho3i)) / 2);
  }
  .m7ctzi26 {
    padding-bottom: calc((var(--_1gjibho9) - var(--_1gjibho3s)) / 2);
    padding-top: calc((var(--_1gjibho9) - var(--_1gjibho3s)) / 2);
  }
  .m7ctzi27 {
    padding-bottom: calc((var(--_1gjibho9) - var(--_1gjibho42)) / 2);
    padding-top: calc((var(--_1gjibho9) - var(--_1gjibho42)) / 2);
  }
}
.y4gdq30 {
  --_1gjibho0: 24px;
  --_1gjibho1: 8px;
  --_1gjibho2: 12px;
  --_1gjibho3: 16px;
  --_1gjibho4: 24px;
  --_1gjibho5: 32px;
  --_1gjibho6: 48px;
  --_1gjibho7: 64px;
  --_1gjibho8: 96px;
  --_1gjibho9: 48px;
  --_1gjibhoa: 4px;
  --_1gjibhob: 4px;
  --_1gjibhoc: 8px;
  --_1gjibhod: 16px;
  --_1gjibhoe: 24px;
  --_1gjibhof: #e60278;
  --_1gjibhog: #f8b1dc;
  --_1gjibhoh: #fdc221;
  --_1gjibhoi: #fee384;
  --_1gjibhoj: #b91e1e;
  --_1gjibhok: #fb999a;
  --_1gjibhol: #838fa5;
  --_1gjibhom: rgba(153, 191, 247, 0.7);
  --_1gjibhon: #1e47a9;
  --_1gjibhoo: #99bff7;
  --_1gjibhop: #1d559d;
  --_1gjibhoq: #98c9f1;
  --_1gjibhor: #2e3849;
  --_1gjibhot: #eaecf1;
  --_1gjibhos: #fff;
  --_1gjibhou: #12784f;
  --_1gjibhov: #8bdec5;
  --_1gjibhow: #7f35a9;
  --_1gjibhox: #e1b2f5;
  --_1gjibhoy: 2px;
  --_1gjibhoz: 4px;
  --_1gjibho10: 6px;
  --_1gjibho11: 400px;
  --_1gjibho12: 660px;
  --_1gjibho13: 940px;
  --_1gjibho14: 1280px;
  --_1gjibho15: #e60278;
  --_1gjibho16: #f8b1dc;
  --_1gjibho17: #723d02;
  --_1gjibho18: #fee384;
  --_1gjibho19: #b91e1e;
  --_1gjibho1a: #fb999a;
  --_1gjibho1b: #1e47a9;
  --_1gjibho1c: #99bff7;
  --_1gjibho1d: #1d559d;
  --_1gjibho1e: #98c9f1;
  --_1gjibho1f: #2e3849;
  --_1gjibho1h: #fff;
  --_1gjibho1g: #2e3849;
  --_1gjibho1i: #5b2084;
  --_1gjibho1j: #f0d6fa;
  --_1gjibho1k: #2e3849;
  --_1gjibho1l: #fff;
  --_1gjibho1m: #12784f;
  --_1gjibho1n: #8bdec5;
  --_1gjibho1o: #7f35a9;
  --_1gjibho1p: #e1b2f5;
  --_1gjibho1q: #e60278;
  --_1gjibho1r: #5a6881;
  --_1gjibho1s: hsla(0, 0%, 100%, 0.65);
  --_1gjibho1t: #fff;
  --_1gjibho1u: #1c2330;
  --_1gjibho1v: #051a49;
  --_1gjibho1w: #e60278;
  --_1gjibho1x: #cd026b;
  --_1gjibho1y: #fd0585;
  --_1gjibho1z: #feeffa;
  --_1gjibho20: #fdd7f3;
  --_1gjibho21: #fde3f6;
  --_1gjibho22: #fdc221;
  --_1gjibho23: #fef8de;
  --_1gjibho24: #b91e1e;
  --_1gjibho25: #a31a1a;
  --_1gjibho26: #db1616;
  --_1gjibho27: #ffe3e2;
  --_1gjibho28: #fef3f3;
  --_1gjibho29: #fcdbdb;
  --_1gjibho2a: #fde7e7;
  --_1gjibho2b: #1e47a9;
  --_1gjibho2c: #1a3e93;
  --_1gjibho2d: #2455c9;
  --_1gjibho2e: #f0f7fe;
  --_1gjibho2f: #d8eafc;
  --_1gjibho2g: #e4f1fd;
  --_1gjibho2h: #1d559d;
  --_1gjibho2i: #e3f2fb;
  --_1gjibho2j: #2e3849;
  --_1gjibho2k: #242c39;
  --_1gjibho2l: #384459;
  --_1gjibho2m: #f3f5f7;
  --_1gjibho2n: #f3f5f7;
  --_1gjibho2o: #e4e8ed;
  --_1gjibho2p: #ebeff2;
  --_1gjibho2q: #12784f;
  --_1gjibho2r: #e2f7f1;
  --_1gjibho2s: #7f35a9;
  --_1gjibho2t: #f9ebfd;
  --_1gjibho2u: #fff;
  --_1gjibho2v: #1c2330;
  --_1gjibho2w: SeekSans, "SeekSans Fallback", Arial, Tahoma, sans-serif;
  --_1gjibho2x: 783;
  --_1gjibho2y: 1057;
  --_1gjibho2z: -274;
  --_1gjibho30: 0;
  --_1gjibho31: 1000;
  --_1gjibho32: 12px;
  --_1gjibho33: 18.396px;
  --_1gjibho34: 9.396px;
  --_1gjibho35: -0.375em;
  --_1gjibho36: -0.375em;
  --_1gjibho37: 12px;
  --_1gjibho38: 18.396px;
  --_1gjibho39: 9.396px;
  --_1gjibho3a: -0.375em;
  --_1gjibho3b: -0.375em;
  --_1gjibho3c: 14px;
  --_1gjibho3d: 20.962px;
  --_1gjibho3e: 10.962px;
  --_1gjibho3f: -0.3571em;
  --_1gjibho3g: -0.3571em;
  --_1gjibho3h: 14px;
  --_1gjibho3i: 20.962px;
  --_1gjibho3j: 10.962px;
  --_1gjibho3k: -0.3571em;
  --_1gjibho3l: -0.3571em;
  --_1gjibho3m: 16px;
  --_1gjibho3n: 24.528px;
  --_1gjibho3o: 12.528px;
  --_1gjibho3p: -0.375em;
  --_1gjibho3q: -0.375em;
  --_1gjibho3r: 16px;
  --_1gjibho3s: 24.528px;
  --_1gjibho3t: 12.528px;
  --_1gjibho3u: -0.375em;
  --_1gjibho3v: -0.375em;
  --_1gjibho3w: 18px;
  --_1gjibho3x: 27.094px;
  --_1gjibho3y: 14.094px;
  --_1gjibho3z: -0.3611em;
  --_1gjibho40: -0.3611em;
  --_1gjibho41: 18px;
  --_1gjibho42: 27.094px;
  --_1gjibho43: 14.094px;
  --_1gjibho44: -0.3611em;
  --_1gjibho45: -0.3611em;
  --_1gjibho46: 400;
  --_1gjibho47: 500;
  --_1gjibho48: 700;
  --_1gjibho49: 28px;
  --_1gjibho4a: 32.924px;
  --_1gjibho4b: 21.924px;
  --_1gjibho4c: -0.1964em;
  --_1gjibho4d: -0.1964em;
  --_1gjibho4e: 36px;
  --_1gjibho4f: 42.188px;
  --_1gjibho4g: 28.188px;
  --_1gjibho4h: -0.1944em;
  --_1gjibho4i: -0.1944em;
  --_1gjibho4j: 24px;
  --_1gjibho4k: 29.792px;
  --_1gjibho4l: 18.792px;
  --_1gjibho4m: -0.2292em;
  --_1gjibho4n: -0.2292em;
  --_1gjibho4o: 30px;
  --_1gjibho4p: 36.49px;
  --_1gjibho4q: 23.49px;
  --_1gjibho4r: -0.2167em;
  --_1gjibho4s: -0.2167em;
  --_1gjibho4t: 22px;
  --_1gjibho4u: 27.226px;
  --_1gjibho4v: 17.226px;
  --_1gjibho4w: -0.2273em;
  --_1gjibho4x: -0.2273em;
  --_1gjibho4y: 24px;
  --_1gjibho4z: 29.792px;
  --_1gjibho50: 18.792px;
  --_1gjibho51: -0.2292em;
  --_1gjibho52: -0.2292em;
  --_1gjibho53: 20px;
  --_1gjibho54: 24.66px;
  --_1gjibho55: 15.66px;
  --_1gjibho56: -0.225em;
  --_1gjibho57: -0.225em;
  --_1gjibho58: 20px;
  --_1gjibho59: 24.66px;
  --_1gjibho5a: 15.66px;
  --_1gjibho5b: -0.225em;
  --_1gjibho5c: -0.225em;
  --_1gjibho5d: 400;
  --_1gjibho5e: 500;
  --_1gjibho5f: underline;
  --_1gjibho5g: 24px;
  --_1gjibho5h: 20px;
  --_1gjibho5i: transform 0.125s ease, opacity 0.125s ease;
  --_1gjibho5j: transform 0.2s cubic-bezier(0.02, 1.505, 0.745, 1.235);
  --_1gjibho5k: scale(0.95);
  --_1gjibho5l:
    0 2px 4px 0px rgba(28, 35, 48, 0.1), 0 2px 2px -2px rgba(28, 35, 48, 0.1),
    0 4px 4px -4px rgba(28, 35, 48, 0.2);
  --_1gjibho5m:
    0 2px 4px 0px rgba(28, 35, 48, 0.1), 0 8px 8px -4px rgba(28, 35, 48, 0.1),
    0 12px 12px -8px rgba(28, 35, 48, 0.2);
  --_1gjibho5n:
    0 2px 4px 0px rgba(28, 35, 48, 0.1), 0 12px 12px -4px rgba(28, 35, 48, 0.1),
    0 20px 20px -12px rgba(28, 35, 48, 0.2);
}
._138rmom6 {
  background: var(--_138rmom0);
}
._138rmom7 {
  background: var(--_138rmom1);
}
._138rmom8 {
  background: var(--_138rmom2);
}
._138rmom9 {
  background: var(--_138rmom3);
}
._138rmoma {
  background: var(--_138rmom4);
}
._138rmomb {
  background: var(--_138rmom5);
}
html:not(._34xydr10) ._138rmomc {
  --_138rmom0: var(--_1gjibhow);
  --_138rmom1: var(--_1gjibhop);
  --_138rmom2: var(--_1gjibhou);
  --_138rmom3: var(--_1gjibhoh);
  --_138rmom4: var(--_1gjibhoj);
  --_138rmom5: var(--_1gjibhon);
}
html:not(._34xydr10) ._138rmomd {
  --_138rmom0: var(--_1gjibhox);
  --_138rmom1: var(--_1gjibhoq);
  --_138rmom2: var(--_1gjibhov);
  --_138rmom3: var(--_1gjibhoi);
  --_138rmom4: var(--_1gjibhok);
  --_138rmom5: var(--_1gjibhoo);
}
html._34xydr10 ._138rmome {
  --_138rmom0: var(--_1gjibhow);
  --_138rmom1: var(--_1gjibhop);
  --_138rmom2: var(--_1gjibhou);
  --_138rmom3: var(--_1gjibhoh);
  --_138rmom4: var(--_1gjibhoj);
  --_138rmom5: var(--_1gjibhon);
}
html._34xydr10 ._138rmomf {
  --_138rmom0: var(--_1gjibhox);
  --_138rmom1: var(--_1gjibhoq);
  --_138rmom2: var(--_1gjibhov);
  --_138rmom3: var(--_1gjibhoi);
  --_138rmom4: var(--_1gjibhok);
  --_138rmom5: var(--_1gjibhoo);
}
._138rmomg {
  border-bottom-right-radius: 0 !important;
  border-top-right-radius: 0 !important;
}
._138rmomh {
  width: var(--_1gjibhoe);
}
._138rmomi {
  width: var(--_1gjibhoa);
}
._1177hl70 {
  margin-bottom: -0.1em;
}
._1177hl72 {
  text-overflow: ellipsis;
  white-space: nowrap;
}
._1177hl70 ._1177hl72 {
  padding-bottom: 0.1em;
}
@supports (display: -webkit-box) and (-webkit-line-clamp: 1) {
  ._1177hl74 {
    display: -webkit-box;
    white-space: normal;
    -webkit-line-clamp: var(--_1177hl73);
    -webkit-box-orient: vertical;
  }
}
,
  "main.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "main.js.LICENSE.txt": /**
 * @license React
 * react-dom.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react-jsx-runtime.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * scheduler.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */
,
}
`;

exports[`sku-webpack-plugin start should start a development server 1`] = `
SCRIPTS: [
  "main.js",
]
CSS: [
  "main.css",
]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta charset="utf-8">
    <title>
      Webpack App
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <script
      defer
      src="scripts[0]"
    >
    </script>
    <link
      href="styles[0]"
      rel="stylesheet"
    >
  </head>
  <body>
  </body>
</html>
POST HYDRATE DIFFS: 
===================================================================
--- sourceHtml
+++ clientHtml
@@ -20,5 +20,18 @@
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#fff}
+            html.sprinkles_darkMode__34xydr10,html.sprinkles_darkMode__34xydr10 body{color-scheme:dark;background:#1C2330}
+      </style>
+      <div class="seekJobs_seekJobs__y4gdq30 typography_lightModeTone_light__m7ctzi18 typography_darkModeTone_dark__m7ctzi1b">
+        <div class="reset_base__6euo5h0 sprinkles_paddingBottom_gutter_mobile__34xydr8n sprinkles_paddingTop_gutter_mobile__34xydr7j sprinkles_paddingLeft_gutter_mobile__34xydrav sprinkles_paddingRight_gutter_mobile__34xydr9r sprinkles_position_relative_mobile__34xydr5f sprinkles_borderRadius_large_mobile__34xydr67 sprinkles_textAlign_left_mobile__34xydri7 sprinkles_boxShadow_borderNeutralLight_lightMode__34xydr4j sprinkles_boxShadow_borderNeutral_darkMode__34xydr4c typography_lightModeTone_light__m7ctzi18 typography_darkModeTone_dark__m7ctzi1b sprinkles_background_surface_lightMode__34xydr33 sprinkles_background_surfaceDark_darkMode__34xydr36">
+          <span class="reset_base__6euo5h0 sprinkles_display_block_mobile__34xydr4z typography_fontFamily__m7ctzi0 typography_fontWeight_regular__m7ctzi1 typography_tone_neutral__m7ctzi21 capsize_capsizeStyle__1gtekyg4 typography_textSize_large__m7ctzid">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file
`;
